--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
 <ul class="nav nav-pills flex-column">
   <li class="nav-item">
-    <a href="#" class="nav-link">Sales Volume</a>
+    <a routerLink="/sales" class="nav-link">Sales Volume</a>
   </li>
   <li class="nav-item">
-    <a href="#" class="nav-link">Latest Orders</a>
+    <a routerLink="/orders" class="nav-link">Latest Orders</a>
   </li>
   <li class="nav-item">
-    <a href="#" class="nav-link">System Health</a>
+    <a routerLink="/helath" class="nav-link">System Health</a>
   </li>
 </ul>
