--- a/src/app/sections/section-sales/section-sales.component.html
+++ b/src/app/sections/section-sales/section-sales.component.html
@@ -1,3 +1,33 @@
-<p>
-  section-seles works!
-</p>
+<div class="section-container">
+  <div class="cards">
+    <div class="card-deck">
+      <div class="card mb-3 shadow card-theme">
+        <div class="card-header card-header-theme">
+          <h5>Daily Orders</h5>
+          <div class="card-body">
+            <app-bar-chart></app-bar-chart>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-deck">
+      <div class="card mb-3 shadow card-theme">
+        <div class="card-header card-header-theme">
+          <h5>Orders by Customer</h5>
+          <div class="card-body">
+            <app-pie-chart></app-pie-chart>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-deck">
+      <div class="card mb-3 shadow card-theme">
+        <div class="card-header card-header-theme">
+          <h5>Orders by State</h5>
+          <div class="card-body">
+            <app-pie-chart></app-pie-chart>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
