server component created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <app-sidebar id="sideBar" class="col-sm-3 col-md-2 d-sm-block sidebar">
     </app-sidebar>
     <div class="col-sm-9 ml-sm-auto col-md-10 pt-3" id="dashboard">
-      <router-outlet></router-outlet>
+      <router-outlet class="section-container"></router-outlet>
     </div>
   </div>
 </div>
