--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,6 +6,6 @@
     <a routerLink="/orders" class="nav-link">Latest Orders</a>
   </li>
   <li class="nav-item">
-    <a routerLink="/helath" class="nav-link">System Health</a>
+    <a routerLink="/health" class="nav-link">System Health</a>
   </li>
 </ul>
