--- a/src/app/sections/section-health/section-health.component.html
+++ b/src/app/sections/section-health/section-health.component.html
@@ -1,3 +1,6 @@
-<p>
-  section-health works!
-</p>
+<h2>System Health</h2>
+<div class="card-deck servers">
+  <div *ngFor="let server of servers">
+    <app-server [server]="server"></app-server>
+  </div>
+</div>
