--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,9 +1,9 @@
-<div class="card mb-3 shadow block-status">
+<div class="card mb-3 shadow block-status" [ngStyle]="{'background-color': color}">
   <div class="card-header name">
     {{ server.name }}
   </div>
   <div class="card-body status">
       <h5 class="card-title">{{ server.isOnline }}</h5>
   </div>
-  <button class="btn btn-primary action">Toggle Status</button>
+  <button (click)="toggleStatus(server.isOnline)" class="btn btn-primary action">{{ buttonText }}</button>
 </div>
